Luma_CAPI.h

/**
 * @brief 开始子窗口。
 */
LUMA_API bool ImGui_BeginChild(const char* strId, float width, float height, bool border);
/**
 * @brief 结束子窗口。
 */
LUMA_API void ImGui_EndChild();
/**
 * @brief 开始标签栏。
 */
LUMA_API bool ImGui_BeginTabBar(const char* strId);
/**
 * @brief 结束标签栏。
 */
LUMA_API void ImGui_EndTabBar();
/**
 * @brief 开始标签项。
 */
LUMA_API bool ImGui_BeginTabItem(const char* label);
/**
 * @brief 结束标签项。
 */
LUMA_API void ImGui_EndTabItem();
/**
 * @brief 开始表格。
 */
LUMA_API bool ImGui_BeginTable(const char* strId, int columns);
/**
 * @brief 结束表格。
 */
LUMA_API void ImGui_EndTable();
/**
 * @brief 表格下一行。
 */
LUMA_API void ImGui_TableNextRow();
/**
 * @brief 表格下一列。
 */
LUMA_API bool ImGui_TableNextColumn();
/**
 * @brief 设置表格列。
 */
LUMA_API void ImGui_TableSetupColumn(const char* label);
/**
 * @brief 表格头部行。
 */
LUMA_API void ImGui_TableHeadersRow();
/**
 * @brief 显示图像。
 */
LUMA_API void ImGui_Image(void* textureId, float width, float height);
/**
 * @brief 图像按钮。
 */
LUMA_API bool ImGui_ImageButton(const char* strId, void* textureId, float width, float height);