Scripting/binding/Luma.SDK/Plugins/ImGuiBindings.cs


    [LibraryImport(DllName, EntryPoint = "ImGui_BeginChild")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool BeginChild([MarshalAs(UnmanagedType.LPStr)] string strId, float width, float height, [MarshalAs(UnmanagedType.Bool)] bool border);

    [LibraryImport(DllName, EntryPoint = "ImGui_EndChild")]
    public static partial void EndChild();

    #endregion

    #region Tab Bar

    [LibraryImport(DllName, EntryPoint = "ImGui_BeginTabBar")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool BeginTabBar([MarshalAs(UnmanagedType.LPStr)] string strId);

    [LibraryImport(DllName, EntryPoint = "ImGui_EndTabBar")]
    public static partial void EndTabBar();

    [LibraryImport(DllName, EntryPoint = "ImGui_BeginTabItem")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool BeginTabItem([MarshalAs(UnmanagedType.LPStr)] string label);

    [LibraryImport(DllName, EntryPoint = "ImGui_EndTabItem")]
    public static partial void EndTabItem();

    #endregion

    #region Table

    [LibraryImport(DllName, EntryPoint = "ImGui_BeginTable")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool BeginTable([MarshalAs(UnmanagedType.LPStr)] string strId, int columns);

    [LibraryImport(DllName, EntryPoint = "ImGui_EndTable")]
    public static partial void EndTable();

    [LibraryImport(DllName, EntryPoint = "ImGui_TableNextRow")]
    public static partial void TableNextRow();

    [LibraryImport(DllName, EntryPoint = "ImGui_TableNextColumn")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool TableNextColumn();

    [LibraryImport(DllName, EntryPoint = "ImGui_TableSetupColumn")]
    public static partial void TableSetupColumn([MarshalAs(UnmanagedType.LPStr)] string label);

    [LibraryImport(DllName, EntryPoint = "ImGui_TableHeadersRow")]
    public static partial void TableHeadersRow();

    #endregion

    #region Image

    [LibraryImport(DllName, EntryPoint = "ImGui_Image")]
    public static partial void Image(IntPtr textureId, float width, float height);

    [LibraryImport(DllName, EntryPoint = "ImGui_ImageButton")]
    [return: MarshalAs(UnmanagedType.Bool)]
    public static partial bool ImageButton([MarshalAs(UnmanagedType.LPStr)] string strId, IntPtr textureId, float width, float height);

    #endregion
}
